<?xml version="1.0"?>
<package format="3">
  <name>risk_aware_manipulation</name>
  <version>0.0.0</version>
  <description>Risk-aware manipulation pipeline in ROS2</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
